Update version and readme

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "moblie-asset-generator",
-  "version": "0.0.1",
+  "name": "mag",
+  "version": "0.1",
   "description": "Asset generator from SVG to png for iOS and Android",
   "main": "index.js",
   "scripts": {},
